--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,14 @@ p{
     scale: 1.1;
     color: var(--btn_color);
 }
+.top_media{
+    text-align: center;
+    margin-bottom: 100px;
+    justify-content: space-between;
+}
+.top_media h2{
+    font-size: 30px;
+}
 /*header styles*/
 header{
     position: fixed;
@@ -176,7 +184,7 @@ font-size: 35px;
 }
 /* the end of thid part :here I make up the home page the into and photo and hire me button*/
 
-/* start about design*/
+                                /* start about design*/
 .about .container{
     background: black;
     justify-content: space-between;
@@ -229,4 +237,178 @@ font-size: 35px;
     }
     .about .div_img{
         width: 35%;
+    }
+                /*end about section*/
+
+
+                /*start services section*/
+    .media .boxes{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .media .boxes .box{
+        width: 30%;
+        text-align: center;
+        padding: 50px 20px;
+        border: 1px solid var(--text_color);
+        border-radius: 10px;
+        transition: 0.3s;
+    }
+    .media .boxes .box:hover{
+        border:2px solid #FF6F61;
+        scale: 1.1;
+    }
+    .media .boxes .box:hover i{
+       
+        scale: 1.3;
+    }
+    .media .boxes .box:hover h3{
+       color: var(--btn_color);
+        scale: 1.2;
+    }
+    .media .boxes .box i{
+        color: var(--btn_color);
+        font-size: 70px;
+        margin-bottom: 30px;
+    }
+    .media .boxes .box h3{
+        font-size: 25px;
+        margin-bottom: 30px;
+    }
+    .media .boxes .box p{
+        font-size: 14px;
+        margin-bottom: 30px;
+    }
+
+    /*end services styles */
+
+    /*start project to share my works*/
+    .projects .project_box{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 50px;
+    }
+    .projects .project_box img{
+        width: 45%;
+    }
+    .projects .project_box .text{
+        margin-left: 100px;
+        width: calc(50%-100px);
+
+    }
+    .projects .project_box .text h4{
+        font-size: 25px;
+        font-weight: normal;
+        margin-bottom: 20px;
+    }
+    .projects .project_box .text h3 a{
+        color: var(--back_color);
+        font-size: 40px;
+        transition: 0.5s;
+    }
+    .projects .project_box .text h3 a:hover{
+        scale: 1.1;
+        color: var(--btn_color);
+    }
+    .projects .project_box .text p{
+        margin: 30px 0 50px;
+        font-size: 18px;
+
+    }
+    .projects .project_box .text .link{
+        display: block;
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        line-height: 50px;
+        border: 1px solid var(--text_color);
+        border-radius: 50%;
+        color: black;
+        background: var(--btn_color);
+        transition: 0.3s;
+        
+    }
+    .projects .project_box .text .link:hover{
+        scale: 1.2;
+    }
+    .projects .project_box.right_side{
+        flex-direction: row-reverse;
+    }
+    /* end of project section*/
+    /*start contact side*/
+    .contact .top_media{
+        margin-bottom: 100px;
+    }
+    .contact .social_contact{
+        width: 30%;
+    }
+    .contact .container{
+        display: flex;
+        justify-content: space-between;
+    }
+    .contact form{
+        width: 60%;
+        text-align: center;
+    }
+    .contact form .inpts_form{
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .contact form .inpts_form input,
+    .contact form .inpts_form textarea{
+        padding: 20px;
+        border-radius: 5px;
+        outline: none;
+        background-color: #A0AEBF;
+        color: black;
+        margin-bottom: 30px;
+        border: 1px solid var(--back_color);
+    }
+    .contact form .inpts_form input{
+        width: 48%;
+    }
+    .contact form .inpts_form textarea{
+        width: 100%;
+    }
+    .contact form .inpts_form input:focus,
+    .contact form .inpts_form textarea:focus{
+      border-color: #FF6F61;
+    }
+    .contact .btn{
+        font-size: 18px;
+        outline: none;
+    }
+
+    .contact .social_contact h2{
+        margin-bottom: 5px;
+        color:var(--back_color);
+        margin-left: 10px;
+    }
+    .contact .social_contact .links{
+        display: flex;
+        flex-direction: column;
+    }
+    .contact .social_contact .links a{
+        margin-bottom: 5px;
+        left: 0;
+        transition: 0.3s;
+        font-size: 20px;
+        position: relative;
+        color: var(--back_color);
+
+    }
+    .contact .social_contact .links a:hover{
+        left: 15px;
+    }
+    .contact .social_contact .links a i{
+        color: var(--btn_color);
+        width: 45px;
+        height: 45px;
+        background: var(--main_color);
+        text-align: center;
+        border-radius: 5px;
     }
