--- a/css/styles.css
+++ b/css/styles.css
@@ -1,616 +1,122 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&display=swap");
-/*this the default style for page */
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style-type: none;
-    font-family: "Inter", sans-serif;  
-}
-/*I chose the theme colors*/
-:root{
-    --main_color:#1B3A57;
-    --back_color: #E6F1F9;
-    --btn_color:#FF6F61 ;
-    --text_color:#A0AEBF ;
-    --footer_color: #1B3A57;
-
-}
-body{
-    background: var(--main_color);
-}
-
-.container{
-    width: 80%;
-    margin: auto;
-    max-width: 1500px;
-}
-
-h1,h2,h3,h4,h5,h6{
-    color: var(--text_color);
-    font-family: "DM",sans-serif;
-}
-span{
-    color: var(--btn_color);
-}
-section{
-    padding: 80px 0;
-}
-p{
-    color: var(--text_color);
-    line-height: 1.7;
-}
-.btns{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-.btn{
-    background: var(--btn_color);
-    padding: 14px 30px;
-    border-radius: 10px;
-    font-weight: 600;
-    text-transform: capitalize;
-    color: black;
-    transition: 0.3s;
-}
-.btn:hover{
-    scale: 1.1;
-}
-.btn_nobg{
-    color: aliceblue;
-    transition: 0.3s;
-    text-transform: capitalize;
-    text-decoration: underline;
-}
-.btn_nobg:hover{
-    scale: 1.1;
-    color: var(--btn_color);
-}
-.top_media{
-    text-align: center;
-    margin-bottom: 100px;
-    justify-content: space-between;
-}
-.top_media h2{
-    font-size: 30px;
-}
-/*header styles*/
-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 70px;
-    transition: 0.5s;
-}
-header.active{
-    background: black;
-    border-bottom: 1px solid var(--btn_color);
-    z-index: 999;
-
-}
-header nav{
-    color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-}
-
-header nav .links{
-    display: flex;
-    gap: 40px;
-}
-
-header nav .links a{
-    color: var(--text_color);
-    transition: 0.3s;
-    text-transform: capitalize;
-    font-size: 18px;
-}
-header nav .links a:hover{
-    color: #FF6F61;
-    scale: 1.2;
-}
-header nav .icons{
-    display: flex;
-    gap: 20px;
-}
-header nav .icons a{
-    transition: 0.3s;
-    gap: 30px;
-    font-size: 22px;
-    color: var(--btn_color);
-}
-header nav .icons a:hover{
-    scale: 1.1;
-}
-/*here I make up the home page the into and photo and hire me button*/
-.issam {
-    padding-top: 50px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.issam .container{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-}
-.issam .div_text{
-    width: 50%;
-    margin-left: 50px;
-}
-.issam .btn{
-    font-size: 20px;
-    padding: 18px 30px;
-}
-.issam .btns{
-}
-.issam .div_text h4{
-color: var(--text_color);
-font-size: 35px;
-}
-.issam .div_text h1{
-    font-size: 50px;
-}
-.issam .div_text h2{
-    font-size: 60px;
-    font-weight: normal;
-    line-height: 0.9;
-}
-.issam .div_text p{
-    margin: 20px 0;
-    font-size: 18px;
-    width: 80%;
-}
-.issam .div_img{
-    width: 35%;
-    position: relative;
-    border-radius: 0 0 600px 600px;
-    overflow: hidden;
-}
-.issam .div_img .person{
-    
-}
-.issam .div_img .bg_img{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-}
-/* the end of thid part :here I make up the home page the into and photo and hire me button*/
-
-                                /* start about design*/
-.about .container{
-    background: black;
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-    padding: 50px;
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #02022d;
+    color: white;
+  }
+  
+  .navbar {
+    background-color: #ea8603;
+  }
+  
+  .navbar-brand {
+    color: white;
+  }
+  
+  .nav-link {
+    color: white;
+  }
+  
+  
+  .hero {
     margin-top: 100px;
-}
-.about .div_text{
-    width: 50%;
+    padding: 50px 0;
+    margin-bottom: 100px;
+  }
+  .hero .container .text_hero{
 
-}
-.about .div_text h5{
-    color: var(--text_color);
-    font-size: 18px;
-    text-transform: capitalize;
-}
-.about .div_text h2{
-    font-size: 45px;
-    margin-bottom: 25px 0 5px;
-}
-
-.about .div_text h4{
-    font-size: 30px;
-    margin-bottom: 20px;
-}
-.about .div_text p{
-    line-height: 1.8;
-}
-.about .div_text .btn{
- color: black;
-}
-.about .div_text .btn:hover{
- 
-    scale: 1.3;
-   }
-
-.about .div_text ul  {
+    text-align: start;
+  }
+  .hero h1 {
+    font-size: 3rem;
+  }
+  
+  .hero .highlight {
+    color: #2babe2;
+  }
+  
+  .hero p {
+    font-size: 1.2rem;
+  }
+  
+  .hero img {
+    width: 60%;
+  }
+  
+  .about {
+    padding: 50px 0;
+    
+  }
+  .about .container{
     display: flex;
-    color: var(--back_color);
-    margin: 30px 0 20px;
-    flex-wrap: wrap;
-    }
-    .about .div_text ul li{
-        width: 45%;
-        font-weight: bold;
-        margin-bottom: 30px;
-        display: flex;
-        gap: 10px;
-    }
-    .about .div_img{
-        max-width: 100%;
-    height: auto;
-        margin-right: 20px;
-    }
-                /*end about section*/
-
-
-                /*start services section*/
-    .media .boxes{
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-    .media .boxes .box{
-        width: 30%;
-        text-align: center;
-        padding: 50px 20px;
-        border: 1px solid var(--text_color);
-        border-radius: 10px;
-        transition: 0.3s;
-    }
-    .media .boxes .box:hover{
-        border:2px solid #FF6F61;
-        scale: 1.1;
-    }
-    .media .boxes .box:hover i{
-       
-        scale: 1.3;
-    }
-    .media .boxes .box:hover h3{
-       color: var(--btn_color);
-        scale: 1.2;
-    }
-    .media .boxes .box i{
-        color: var(--btn_color);
-        font-size: 70px;
-        margin-bottom: 30px;
-    }
-    .media .boxes .box h3{
-        font-size: 25px;
-        margin-bottom: 30px;
-    }
-    .media .boxes .box p{
-        font-size: 14px;
-        margin-bottom: 30px;
-    }
-
-    /*end services styles */
-
-    /*start project to share my works*/
-    .projects .project_box{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: 50px;
-    }
-    .projects .project_box img{
-        width: 45%;
-    }
-    .projects .project_box .text{
-        margin-left: 100px;
-        width: calc(50%-100px);
-
-    }
-    .projects .project_box .text h4{
-        font-size: 25px;
-        font-weight: normal;
-        margin-bottom: 20px;
-    }
-    .projects .project_box .text h3 a{
-        color: var(--back_color);
-        font-size: 40px;
-        transition: 0.5s;
-    }
-    .projects .project_box .text h3 a:hover{
-        scale: 1.1;
-        color: var(--btn_color);
-    }
-    .projects .project_box .text p{
-        margin: 30px 0 50px;
-        font-size: 18px;
-
-    }
-    .projects .project_box .text .link{
-        display: block;
-        width: 50px;
-        height: 50px;
-        text-align: center;
-        line-height: 50px;
-        border: 1px solid var(--text_color);
-        border-radius: 50%;
-        color: black;
-        background: var(--btn_color);
-        transition: 0.3s;
-        
-    }
-    .projects .project_box .text .link:hover{
-        scale: 1.2;
-    }
-    .projects .project_box.right_side{
-        flex-direction: row-reverse;
-    }
-    /* end of project section*/
-
-
-
-
-    /*start contact side*/
-    .contact .top_media{
-        margin-bottom: 100px;
-    }
-    .contact .social_contact{
-        width: 30%;
-    }
-    .contact .container{
-        display: flex;
-        justify-content: space-between;
-    }
-    .contact form{
-        width: 60%;
-        text-align: center;
-    }
-    .contact form .inpts_form{
-        display: flex;
-        width: 100%;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    .contact form .inpts_form input,
-    .contact form .inpts_form textarea{
-        padding: 20px;
-        border-radius: 5px;
-        outline: none;
-        background-color: #A0AEBF;
-        color: black;
-        margin-bottom: 30px;
-        border: 1px solid var(--back_color);
-    }
-    .contact form .inpts_form input{
-        width: 48%;
-    }
-    .contact form .inpts_form textarea{
-        width: 100%;
-    }
-    .contact form .inpts_form input:focus,
-    .contact form .inpts_form textarea:focus{
-      border-color: #FF6F61;
-    }
-    .contact .btn{
-        font-size: 18px;
-        outline: none;
-    }
-
-    .contact .social_contact h2{
-        margin-bottom: 5px;
-        color:var(--back_color);
-        margin-left: 10px;
-    }
-    .contact .social_contact .links{
-        display: flex;
-        flex-direction: column;
-    }
-    .contact .social_contact .links a{
-        margin-bottom: 5px;
-        left: 0;
-        transition: 0.3s;
-        font-size: 20px;
-        position: relative;
-        color: var(--back_color);
-
-    }
-    .contact .social_contact .links a:hover{
-        left: 15px;
-    }
-    .contact .social_contact .links a i{
-        color: var(--btn_color);
-        width: 45px;
-        height: 45px;
-        background: var(--main_color);
-        text-align: center;
-        border-radius: 5px;
-    }
-    /*end contact section*/
-
-    /*start responsive editing*/
-    .close_menu
-        {
-        display: none;
-    }
-    .icon_menu{
-        display: none;
-    }
-    header .links .logo{
-        display: none;
-    }
-    /*for screens -1250px*/
-   @media (max-width:1250px) {
-    .container{
-        width: 90%;
-    }
-   }
-    /*for screens -1000px*/
-   @media (max-width:1000px) {
-    header nav .links{
-        flex-direction: column;
-        width: 400px;
-        left: -400px;
-        position: fixed;
-        top: 0;
-        background: black;
-        padding: 50px 0;
-        height: 100%;
-        border-right:1px solid var(--text_color);
-        text-align: center;
-        transition: 0.3s ease-in-out;
-    }
-    header nav .links.active{
-        left: 0;
-        z-index: 999;
-        
-    }
-    .close_menu{
-        display: block;
-        font-size: 28px;
-        position: absolute;
-        top: 30px;
-        right: 30px;
-    }
-    .icon_menu{
-        display: block;
-        font-size: 28px;
-    }
-    header .links .logo{
-        display: block;
-    
-    }
-    header .links .logo{
-        display: block;
-    }
-    /*responsive home*/
-    .issam .div_text h4{
-        font-size: 25px;
-    }
-    .issam .div_text h2{
-        font-size: 50px;
-    }
-    .issam .div_text p{
-        font-size: 16px;
-        margin: 30px auto;
-        width: 60%;
-    }
-    .issam .btn{
-        font-size: 16px;
-        padding: 15px 30px;
-        
-    }
-    .issam{
-        height: auto;
-    }
-    .issam .btns{
-        justify-content: center;
-    }
-    .issam .div_text{
-        text-align: center;
-        margin-bottom: 30px;
-    }
-
-    .issam .container{
-        width: 90%;
-        flex-direction: column;
-    }
-    .issam .div_text{
-        width: 100%;
-        margin-top: 50px;
-    }
-    .issam .div_img{
-        width: 100%;
-    
-    }
-    .issam .div_img .person{
-        margin-left: 50px;
-    }
-    .about .container{
-        flex-direction: column;
-    }
-    .about .div_text{
-        width: 100%;
-    }
-    .about .div_img{
-        width: 80%;
-        padding: 10px 10px;
-        margin: 30px 10px;
-    }
-    .about .div_text .btn{
-        margin-left: 150px;
-    }
-    .media .boxes .box{
-        width: 45%;
-        margin-bottom: 20px;
-    }
-    .projects .project_box .text{
-        margin-left: 50px;
-    }
-    .projects .project_box .text p{
-        margin: 0 0 0 0;
-    }
-    .projects .project_box .text h4{
-        margin-bottom: 5px;
-        font-size: 18px;
-    }
-    .projects .project_box .text h3{
-        font-size: 25px;
-    }
-    .contact .container{
-        flex-direction: column;
-        align-items: center;
-    }
-    .contact .social_contact{
-        width: 100%;
-        text-align: center;
-    }
-    .contact .social_contact .links{
-        display: flex;
-        flex-direction: row;
-        margin-bottom: 50px;
-       
-    }
-    .contact .social_contact .links a{
-        align-content: center;
-        align-items: center;
-        font-size: 16px;
-        margin: 0 0 0 0;
-    }
-    .contact .social_contact .links a i{
-        font-size: 16px;
-       align-content: center;
-    }
-    .about .div_img{
-        scale: 0.8;
-        display: flex;
-    justify-content: center; /* Horizontal centering */
-    align-items: center; 
-        
-    }
-    .about .container{
-        align-items: center;
-        align-content: center;
-        justify-content: center;
-    }
-   }
-
-
- /*for screens -500px*/
-
- @media (max-width:500px) {
-    header nav .icons a{
-        font-size: 20px;
-    }
-    header nav .icons{
-        gap: 15px;
-        align-items: center;
-    }
-    header .container .logo_re img{
-        width: 150px;
-        background-color: #4f0fae;
-    }
-header nav .logo img{
-    width: 150px;
-}
-header nav .links{
+    justify-content: space-between;
+    align-items: center;
+    background-color: #0b0c2a;
     width: 100%;
-    left: -100%;
-}
-   .icon_menu{
-    margin-left: 10px;
-   }
- }
+    padding: 10px 10px 20px 50px;
+    
+  }
+  .about .text_about{
+   display:flex ;
+   flex-direction: column;
+
+  }
+  .about .text_about .btn{
+    width: fit-content;
+    font: 2em sans-serif;
+    align-self: center;
+  }
+  .about h2 {
+    font-size: 3.5rem;
+  }
+  .about p{
+    font-size: 1.2rem;
+  }
+  
+  .about .highlight {
+    color: #2babe2;
+  }
+  
+  .services {
+    padding: 50px 0;
+    
+  }
+  
+  .services h2 {
+    font-size: 2.5rem;
+  }
+  
+  .services .service-box {
+    background-color: #0b0c2a;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 10px;
+  }
+  
+  .service-box i {
+    font-size: 3rem;
+    color: #2babe2;
+  }
+  
+  .contact {
+    padding: 50px 0;
+  }
+  
+  .contact input, .contact textarea {
+    background-color: #16172d;
+    border: none;
+    color: white;
+  }
+  
+  .contact .form-control {
+    margin-bottom: 10px;
+  }
+  
+  .btn-primary {
+    background-color: #2babe2;
+    border: none;
+  }
+  
+  .btn-primary:hover {
+    background-color: #2191c3;
+  }
+  
