--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -119,13 +119,13 @@
     <h2>My Projects</h2>
     <div class="project-grid">
       <div class="project-card">
-        <img src="img/thum2.jpg" alt="Project 1">
+        <img src="static/img/thum2.jpg" alt="Project 1">
         <h3>English Vocabulary for Kids</h3>
         <p>Learn new vocabulary with fun flashcards and games.</p>
         <a href="https://youtu.be/xeyYO-FK00k?si=u1raMWauqpBwLPgr" class="btn" target="_blank">Watch Video</a>
       </div>
       <div class="project-card">
-        <img src="img/thum1.jpg" alt="Project 2">
+        <img src="static/img/thum1.jpg" alt="Project 2">
         <h3>Mastering Basic Grammar</h3>
         <p>An engaging lesson on basic grammar rules for beginners.</p>
         <a href="https://youtu.be/EVDVTXwa8xU?si=Rw4XpZTCLylyIF6N" class="btn" target="_blank">Watch Video</a>
