--- a/templates/includes/projects.html
+++ b/templates/includes/projects.html
@@ -22,6 +22,18 @@
         <p>An engaging lesson on basic grammar rules for beginners.</p>
         <a href="https://youtu.be/EVDVTXwa8xU?si=Rw4XpZTCLylyIF6N" class="btn" target="_blank">Watch Video</a>
       </div>
+      <div class="project-card">
+        <img src="static/img/thum1.jpg" alt="Project 4">
+        <h3>Mastering Basic Grammar</h3>
+        <p>An engaging lesson on basic grammar rules for beginners.</p>
+        <a href="https://youtu.be/EVDVTXwa8xU?si=Rw4XpZTCLylyIF6N" class="btn" target="_blank">Watch Video</a>
+      </div>
+      <div class="project-card">
+        <img src="static/img/thum1.jpg" alt="Project 3">
+        <h3>Mastering Basic Grammar</h3>
+        <p>An engaging lesson on basic grammar rules for beginners.</p>
+        <a href="https://youtu.be/EVDVTXwa8xU?si=Rw4XpZTCLylyIF6N" class="btn" target="_blank">Watch Video</a>
+      </div>
       <!-- Add more project cards as needed -->
     </div>
   </section>
