--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
-<body>
+<body id="body_base">
  {% include 'includes/navbr.html'%}
  {% include 'includes/home.html'%}
  {% include 'includes/about.html'%}
