--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,6 +11,11 @@ body {
     background-color: var(--baby-blue);
     color: var(--navy-blue);
   }
+  body {
+    font-family: 'Arial', sans-serif;
+    background-color: #0000;
+    color: white;
+}
   h1 {
     color: var(--blue-grotto);
 }
