--- a/templates/index.html
+++ b/templates/index.html
@@ -27,5 +27,30 @@
   <script src="{% static 'js/main.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBvkSb5FdXLyyPMmrrIu2enfTf2Pm4yiDs",
+      authDomain: "myportfolio-c59ae.firebaseapp.com",
+      projectId: "myportfolio-c59ae",
+      storageBucket: "myportfolio-c59ae.appspot.com",
+      messagingSenderId: "160687693409",
+      appId: "1:160687693409:web:0d04f1943f99ada31a5420",
+      measurementId: "G-E9D4TSDDFC"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
+
 </body>
 </html>
