--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
  {% include 'includes/contact.html'%}
   <!-- Main content block -->
   {% block content %}
-  <!-- The child templates will fill this block -->
+  <!-- The child templates willsfdsfd fill this block -->
   {% endblock %}
   
   {% include 'includes/footer.html'%}
