--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,220 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}Portfolio | Issam Elasri{% endblock %}</title>
+  <title>Portfolio | Issam Elasri</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="statics/css/styles.css">
   
 </head>
 <body id="body_base">
- {% include 'includes/navbr.html'%}
- {% include 'includes/home.html'%}
- {% include 'includes/about.html'%}
- {% include 'includes/services.html'%}
- {% include 'includes/projects.html'%}
- {% include 'includes/contact.html'%}
-  <!-- Main content block -->
-  {% block content %}
-  <!-- The child templates willsfdsfd fill this block -->
-  {% endblock %}
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#home">Portfolio | Issam Elasri</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+   <!-- Hero Section -->
+   <section class="hero text-center" id="hero">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="text_hero">
+            <h1>Hello I'm <br><span class="highlight">Issam E.</span></h1>
+            <h4>English Teacher</h4>
+            <p>I can make your language learning experience enjoyable and fulfilling, no matter your level of experience or goal of fluency.</p>
+          </div>
+          <a href="statics/img/CV.pdf" class="btn btn-primary">Download CV</a>
+          <div class="social-icons mt-3">
+            <a href="https://www.instagram.com/issam.elasri91/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@issamasri91" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://web.facebook.com/profile.php?id=100084811278427" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.youtube.com/@issamelasri6739" target="_blank"><i class="fab fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="statics/img/home image.png" alt="Issam E." class="img-fluid rounded-circle">
+        </div>
+      </div>
+    </div>
+  </section>
+
+   <!-- About Section -->
+   <section class="about" id="about">
+    <div class="container">
+      <div class="text_about">
+        <h2>About <span class="highlight">Me</span></h2>
+        <h1>I'm an English Teacher</h1>
+        <h3>I teach students from different backgrounds and levels.</h3>
+        <p>As a certified TESOL teacher, I bring effective teaching strategies and extensive experience to the classroom. Over the past few years, I have successfully helped students of diverse backgrounds and skill levels achieve their language goals.</p>
+        <a href="tel:+212609237034" class="btn btn-primary">Join Me</a>
+      </div>
+      <div class="profile-image">
+        <img src="statics/img/aboutimage.png" alt="Profile Picture" class="img-fluid rounded-circle">
+      </div>
+    </div>
+  </section>
+
+   <!-- Services Section -->
+ <section class="services text-center" id="services">
+  <div class="container">
+    <h2>Our <span class="highlight">Services</span></h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="service-box">
+          <i class="fas fa-globe"></i>
+          <h4>Online Tutoring</h4>
+          <p>One-on-One Sessions Provide personalized online tutoring for students who prefer flexible learning options.</p>
+          
+          <button onclick="openWhatsap()"  class="btn">Chat on WhatsApp</button>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="service-box">
+          <i class="fas fa-graduation-cap"></i>
+          <h4>Exam Preparation</h4>
+          <p>IELTS, TOEFL, and Cambridge Exam Prep Provide targeted preparation courses for standardized English tests.</p>
+          <button onclick="openWhatsap()" class="btn">Chat on WhatsApp</button>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="service-box">
+          <i class="fas fa-comments"></i>
+          <h4>Conversational English</h4>
+          <p>Speaking Clubs Organize conversation groups to help students practice speaking in a relaxed environment.</p>
+          <button onclick="openWhatsap()"  class="btn">Chat on WhatsApp</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!--projects-->
+
+<section id="projects">
+  <h2>My Projects</h2>
+  <div class="project-grid">
+    <div class="project-card">
+      <img src="statics/img/thum1.jpg" alt="Project 1">
+      <h3>English Vocabulary for Kids</h3>
+      <p>Learn new vocabulary with fun flashcards and games.</p>
+      <a href="https://youtu.be/xeyYO-FK00k?si=u1raMWauqpBwLPgr" class="btn" target="_blank">Watch Video</a>
+    </div>
+    <div class="project-card">
+      <img src="statics/img/thum2.jpg" alt="Project 2">
+      <h3>Mastering Basic Grammar</h3>
+      <p>An engaging lesson on basic grammar rules for beginners.</p>
+      <a href="https://youtu.be/EVDVTXwa8xU?si=Rw4XpZTCLylyIF6N" class="btn" target="_blank">Watch Video</a>
+    </div>
+    <div class="project-card">
+      <img src="statics/img/thum2.jpg" alt="Project 4">
+      <h3>Mastering Basic Grammar</h3>
+      <p>An engaging lesson on basic grammar rules for beginners.</p>
+      <a href="https://youtu.be/EVDVTXwa8xU?si=Rw4XpZTCLylyIF6N" class="btn" target="_blank">Watch Video</a>
+    </div>
+    <div class="project-card">
+      <img src="statics/img/thum1.jpg" alt="Project 3">
+      <h3>Mastering Basic Grammar</h3>
+      <p>An engaging lesson on basic grammar rules for beginners.</p>
+      <a href="https://youtu.be/EVDVTXwa8xU?si=Rw4XpZTCLylyIF6N" class="btn" target="_blank">Watch Video</a>
+    </div>
+    <!-- Add more project cards as needed -->
+  </div>
+</section>
+
+<!--projects-->
+ 
+   
+ <section class="contact text-center" id="contact">
+  <div class="container">
+    <h2>Contact <span class="highlight">Me</span></h2>
+    <form method="POST" action="https://api.web3forms.com/submit" id="form_submit">  <!-- The action should point to your form view URL -->
+       <!-- This is necessary for form security in Django -->
+      <input type="hidden" name="access_key" value="d4dc6320-f218-4885-8c2d-97d54a097c4b">
+      <div class="row">
+        <div class="col-md-6">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required class="form-control" placeholder="Full name">
+        </div>
+        <div class="col-md-6">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required class="form-control" placeholder="Email">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <label for="phone">Phone Number:</label>
+          <input type="tel" id="phone" name="phone" required class="form-control" placeholder="Phone">
+        </div>
+        <div class="col-md-6">
+          <label for="subject">Subject:</label>
+          <input type="text" id="subject" name="subject" required class="form-control" placeholder="Subject">
+        </div>
+      </div>
+      <label for="message">Message:</label>
+      <textarea class="form-control mt-3" id="message" name="message" required placeholder="Your message"></textarea>
+      <input type="hidden" name="redirect" value="https://web3forms.com/success">
+    
+      <button type="submit"   class="btn btn-primary mt-3">Submit</button>
+      <div id="result">
+
+      </div>
+    </form>
+  </div>
+</section>
+
+  <!-- Footer -->
+<footer>
+  <div class="footer-container">
+    <div class="footer-column">
+      <h3>About Me</h3>
+      <p>I create educational English videos for children and beginners. Join my journey to make learning fun!</p>
+    </div>
+    <div class="footer-column">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+    <div class="footer-column">
+      <h3>Contact</h3>
+      <p>Email: <a href="mailto:elasriisssam@gmail.com">elasriisssam@gmail.com</a></p>
+      <p>Phone: <a href="tel:+2120609237034">+2120609237034</a></p>
+    </div>
+    <div class="footer-column">
+      <h3>Follow Me</h3>
+      <div class="social-icons">
+        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>&copy; 2024 Issam Elasri. All Rights Reserved.</p>
+  </div>
+</footer>
   
-  {% include 'includes/footer.html'%}
-  
-  <script src="{% static 'js/main.js' %}"></script>
+  <script src="statics/js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
@@ -38,13 +228,13 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyBvkSb5FdXLyyPMmrrIu2enfTf2Pm4yiDs",
-      authDomain: "myportfolio-c59ae.firebaseapp.com",
-      projectId: "myportfolio-c59ae",
-      storageBucket: "myportfolio-c59ae.appspot.com",
-      messagingSenderId: "160687693409",
-      appId: "1:160687693409:web:0d04f1943f99ada31a5420",
-      measurementId: "G-E9D4TSDDFC"
+      apiKey: "AIzaSyDR1TTfelzHgcA57fr3dl45Q9fp-4GNDF0",
+      authDomain: "myporto-30053.firebaseapp.com",
+      projectId: "myporto-30053",
+      storageBucket: "myporto-30053.appspot.com",
+      messagingSenderId: "615421903589",
+      appId: "1:615421903589:web:87a315dfe0f81301ee0a0c",
+      measurementId: "G-15RTJ6MSMG"
     };
   
     // Initialize Firebase
