--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Issam Elasri</title>
+  <!-- Meta Description (Important for SEO) -->
+  <meta name="description" content="Issam Elasri, a professional English teacher. Learn English with customized lessons, improve speaking, writing, vocabulary, and grammar skills. Offering lessons for beginners and advanced learners, as well as IELTS preparation.">
+
+  <!-- Author Meta Tag -->
+  <meta name="author" content="Issam Elasri">
+
+  <!-- Keywords for SEO -->
+  <meta name="keywords" content="Learn English, English lessons, English for beginners, English language tutor, English classes online, Improve English speaking, English grammar lessons, English vocabulary, English pronunciation tips, English listening practice, English conversation practice, Basic English lessons, Intermediate English lessons, English fluency tips, English writing skills, ESL teacher, Study English online, Master English language, Learn English fast, English language course, Speak English fluently, Business English courses, IELTS preparation, English for everyday communication, English speaking confidence, Private English tutor, Customized English lessons, Learn English step by step, English language exercises, Practice English with a tutor">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="statics/css/styles.css">
+  <link src="statics/css/all.min.css" crossorigin="anonymous"></link>
   
 </head>
 <body id="body_base">
@@ -216,7 +226,7 @@
   
   <script src="statics/js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  
 
   <script type="module">
     // Import the functions you need from the SDKs you need
