--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
  <section class="contact text-center" id="contact">
   <div class="container">
     <h2>Contact <span class="highlight">Me</span></h2>
-    <form method="POST" action="https://api.web3forms.com/submit" id="form_submit">  <!-- The action should point to your form view URL -->
+    <form method="POST" action="https://api.web3forms.com/submit" id="form_submit" >  <!-- The action should point to your form view URL -->
        <!-- This is necessary for form security in Django -->
       <input type="hidden" name="access_key" value="d4dc6320-f218-4885-8c2d-97d54a097c4b">
       <div class="row">
@@ -182,7 +182,7 @@
       <textarea class="form-control mt-3" id="message" name="message" required placeholder="Your message"></textarea>
       <input type="hidden" name="redirect" value="https://web3forms.com/success">
     
-      <button type="submit"   class="btn btn-primary mt-3">Submit</button>
+      <button type="submit"  onsubmit="clearForm(event)" class="btn btn-primary mt-3">Submit</button>
       <div id="result">
 
       </div>
